# rag-app

./: .ai-guidelines.md  .env.template  .gitignore  OPTIMIZATION_SUMMARY.md  README.md  ROADMAP.md  UI_README.md  UPDATES-2024-08-15.md  abstract_pdf_processor.py  app.py  basic_side_by_side.py  clean_rag_app.py  cleanup.bat  copy_and_rename.py  direct_app.py  document_processor.py  faiss_db.py  final_side_by_side.py  last_run_time.txt  pdf_processor.py  prd-rag.md  pyproject.toml  rag_installation_summary.md  rag_system_flow.md  rename_files.py  requirements-ui.txt  requirements.txt  requirements_web.txt  setup.py  simple_app.py  simple_side_by_side.py  smart_document_processor.py  start_web_app.bat  start_web_app.py  start_web_app.sh  tdd-rag.md  test_classification.txt  test_clearance.py  test_docs.py  track_updates.py  (+9 more)
.streamlit/: config.toml
config/: sharepoint.json.example
data/: clearances.json  document_registry.json  document_registry.tmp  test_results.json
demo/: text_reader_demo.py
docs/: CODE_ORGANIZATION.md  DOCUMENT_RELATIONSHIPS.md  IMPLEMENTATION_STEPS.md  INSTALLATION.md  QUANTIZED_EMBEDDINGS.md  SEMANTIC_CACHING.md  SOP_FILE_PREPARATION.md  SYSTEM_ARCHITECTURE.md  advanced_caching_strategies.md  application_files.csv  pipeline_documentation.md
examples/: README.md  llm_factory_example.py
scripts/: build_vector_db.py  chunk_documents.py  create_sample_plan_structure.py  generate_embeddings.py  preload_models.py  process_documents.py  rag_demo.py  rebuild_vector_db.py  run_document_manager.py  test_advanced_caching.py  test_combined_caching.py  (+7 more)
(+2684 files in other folders)
