[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-app"
version = "0.1.0"
description = "Retrieval-Augmented Generation (RAG) application for document processing"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "C0330",  # bad-continuation
    "C0326",  # bad-whitespace
]

[tool.pylint.format]
max-line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
filterwarnings = [
    # Filter PyMuPDF/SWIG deprecation warnings
    'ignore:builtin type SwigPyPacked has no __module__ attribute',
    'ignore:builtin type SwigPyObject has no __module__ attribute',
    'ignore:builtin type swigvarlink has no __module__ attribute',
]
